--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,13 @@
 #    - npm install
 #    - npm test
 
-# deploy:
-#   stage: deploy
-#   only:
-#     - demo
-#  script:
-#    - chmod 600 .deploy/prep_staging_key_pair.pem
-#    - apk update && apk upgrade
-#    - apk add git openssh bash
-#    - pm2 deploy ecosystem.json production update
+deploy:
+  stage: deploy
+  only:
+    - demo
+ script:
+ - echo 'what'
+  #  - chmod 600 .deploy/prep_staging_key_pair.pem
+  #  - apk update && apk upgrade
+  #  - apk add git openssh bash
+  #  - pm2 deploy ecosystem.json production update
